fix: z-index for images

--- a/src/blocks/modules/header/header.scss
+++ b/src/blocks/modules/header/header.scss
@@ -42,11 +42,11 @@
     }
 
     &__burger {
+      z-index: 2;
       display: block;
       position: fixed;
       top: 12px;
       right: 32px;
-      z-index: 1;
     }
   }
 }
