--- a/src/blocks/modules/menu/menu.scss
+++ b/src/blocks/modules/menu/menu.scss
@@ -1,6 +1,6 @@
 .menu {
+  z-index: 3;
   position: fixed;
-  z-index: 2;
   top: 0;
   right: 0;
   width: 100%;
