--- a/src/blocks/modules/projects/projects.scss
+++ b/src/blocks/modules/projects/projects.scss
@@ -12,6 +12,7 @@
   }
 
   &__item {
+    z-index: 1;
     width: 100%;
     height: 100%;
     display: flex;
